--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background: radial-gradient(circle, rgba(121,9,9,1) 0%, rgba(2,0,36,1) 100%);
+    background: radial-gradient(circle, rgb(11, 35, 168) 0%, rgba(2,0,36,1) 100%);
     text-align: center;
     padding: 20px;
 }
